syntax = "proto3";
package pre_persistence;
option go_package = "/pre_persistence/test/";

message ServiceNode {
  bytes address = 1;
  bytes publicKey = 2;
  bool paused = 3;
  int32 status = 4;
  repeated string chains = 5;
  string serviceURL = 6;
  string stakedTokens = 7;
  uint64 pausedHeight = 8;
  int64 unstakingHeight = 9;
  bytes output = 10;
}